Resolved module not found error for passwordUtils, corrected require paths in signup and login routes, and integrated password hashing functionality into signup route handler. Additionally, fixed routing issue for login page and added login route to app.js. Tested and verified functionality for signup and login routes.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "bootstrap": "*",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.3",
-        "passport": "*",
+        "express-session": "*",
+        "passport-local": "*",
         "sequelize": "^6.37.2",
         "pg": "^8.7.1"
     }
