--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     },
     "dependencies": {
         "bcrypt": "*",
+        "body-parser": "*",
         "bootstrap": "*",
+        "dotenv": "*",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.3",
         "express-session": "*",
         "passport-local": "*",
-        "sequelize": "^6.37.2",
-        "pg": "^8.7.1"
+        "pg": "^8.11.5",
+        "sequelize": "*",
+        "passport": "*"
     }
 }
