was able to get the routes figured out for the signup and the login. Still trying to figure out the login problem that does not take us to the dashboard. Added some extra security and console.logs even though they cannot be seen.

--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
         "bcrypt": "*",
         "body-parser": "*",
         "bootstrap": "*",
+        "connect-flash": "*",
         "dotenv": "*",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.3",
         "express-session": "*",
+        "passport": "*",
         "passport-local": "*",
         "pg": "^8.11.5",
-        "sequelize": "*",
-        "passport": "*"
+        "sequelize": "*"
+    },
+    "devDependencies": {
+        "jest": "^29.7.0",
+        "supertest": "^6.3.4"
     }
 }
